--- a/index.html
+++ b/index.html
@@ -48,8 +48,20 @@
                 <p>This is a description of Cute Dog 2. Such a playful companion!</p>
             </div>
         </div>
+    </section> 
+    <section>
+        <input type="text" id="search" placeholder="Search for pets">
+        <select id="pet-type">
+            <option value="cat">Cat</option>
+            <option value="dog">Dog</option>
+        </select>
+        <button id="load-more">Load More</button>
     </section>
-    <section id="create-post">
+
+    <div id="gallery" class="gallery">
+        <!-- Images will be dynamically inserted here -->
+    </div>
+<section id="create-post">
         <h2>Create a New Post</h2>
         <form id="createPostForm">
             <input type="text" id="postTitle" placeholder="Title" required>
@@ -71,6 +83,7 @@
         <p>&copy; 2024 Cat and Dog Lover's Corner. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
+    <script type="module" src="gallery.js"></script>
 </body>
 </html> -->
 
