--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <h2>Meet the Dogs</h2>
         <div class="content">
             <div class="card">
-                <img src="https://placedog.net/300/200" alt="Cute Dog 1">
+                <img src="https://placedog.net/300/300" alt="Cute Dog 1">
                 <h3>Cute Dog 1</h3>
                 <p>This is a description of Cute Dog 1. Simply lovable!</p>
             </div>
             <div class="card">
-                <img src="https://placedog.net/301/200" alt="Cute Dog 2">
+                <img src="https://placedog.net/301/300" alt="Cute Dog 2">
                 <h3>Cute Dog 2</h3>
                 <p>This is a description of Cute Dog 2. Such a playful companion!</p>
             </div>
@@ -81,21 +81,15 @@
         </div>
     </section>
 
-    <section>
+    <!-- <section>
         <h2>Favorites</h2>
         <div id="favorites-container-gallery" class="gallery-container">
             <!-- Favorite images will be displayed here -->
         </div>
-    </section>
+    </section> -->
 
-    <section>
-        <h2>Search</h2>
-        <input type="text" id="search-bar" placeholder="Search for pets">
-        <button id="search-btn">Search</button>
-        <div id="cat-container-search" class="gallery-container">
-            <!-- Search results will be displayed here -->
-        </div>
-    </section>
+    
+    </section> 
 <section>
     <div id="gallery" class="gallery">
         <!-- Images will be dynamically inserted here -->
@@ -118,11 +112,11 @@
             <button type="submit">Update Post</button>
         </form>
     </section>
-    <section>
+    <!-- <section>
         <button id="prev-page">Previous Page</button>
         <span id="page-info">Page 1</span>
         <button id="next-page">Next Page</button>
-    </section>
+    </section> -->
 <footer>
         <p>&copy; 2024 Cat and Dog Lover's Corner. All rights reserved.</p>
     </footer>
@@ -130,6 +124,7 @@
     <script type="module" src="gallery.js"></script>
     <script type="module" src="main.js"></script>
     <script type="module" src="api.js"></script>
+    <script type="module" src="ui.js"></script>
 </body>
 </html> -->
 
